--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -24,7 +24,7 @@
             class=""
           {% endif %}
           >
-          <a href="{% url 'index' %}">Listings</a>
+          <a href="{% url 'listings' %}">Listings</a>
             </li>
             <li 
             {% if '/' == request.path %}
