--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load humanize %}
 
 
 {% block content %}
@@ -68,311 +69,45 @@
         <div class="col-12">
           <div class="property-slider-wrap">
             <div class="property-slider">
-              <div class="property-item">
-                <a href="property-single.html" class="img">
-                  <img src='static/images/img_1.jpg' alt="Image" class="img-fluid" />
-                </a>
-
-                <div class="property-content">
-                  <div class="price mb-2"><span>$1,291,000</span></div>
-                  <div>
-                    <span class="d-block mb-2 text-black-50"
-                      >5232 California Fake, Ave. 21BC</span
-                    >
-                    <span class="city d-block mb-3">California, USA</span>
-
-                    <div class="specs d-flex mb-4">
-                      <span class="d-block d-flex align-items-center me-3">
-                        <span class="icon-bed me-2"></span>
-                        <span class="caption">2 beds</span>
-                      </span>
-                      <span class="d-block d-flex align-items-center">
-                        <span class="icon-bath me-2"></span>
-                        <span class="caption">2 baths</span>
-                      </span>
+                {% if listings %}
+                  {% for listing in listings %}
+                  <div class="property-item">
+                    <a href="property-single.html" class="img">
+                      <img src="{{ listing.photo_main.url }}" alt="Image" class="img-fluid" />
+                    </a>
+    
+                    <div class="property-content">
+                      <div class="price mb-2"><span>${{ listing.price | intcomma }}</span></div>
+                      <div>
+                        <span class="d-block mb-2 text-black-50"
+                          >{{ listing.title }}</span
+                        >
+                        <span class="city d-block mb-3">{{ listing.address }}</span>
+    
+                        <div class="specs d-flex mb-4">
+                          <span class="d-block d-flex align-items-center me-3">
+                            <span class="icon-bed me-2"></span>
+                            <span class="caption"> {{ listing.bedrooms }} bedrooms</span>
+                          </span>
+                          <span class="d-block d-flex align-items-center">
+                            <span class="icon-bath me-2"></span>
+                            <span class="caption">{{ listing.bathrooms}} bathrooms</span>
+                          </span>
+                        </div>
+    
+                        <a
+                          href="{% url 'listing' listing.id %}"
+                          class="btn btn-primary py-2 px-3"
+                          >See details</a
+                        >
+                      </div>
                     </div>
-
-                    <a
-                      href="property-single.html"
-                      class="btn btn-primary py-2 px-3"
-                      >See details</a
-                    >
                   </div>
-                </div>
-              </div>
-              <!-- .item -->
-
-              <div class="property-item">
-                <a href="property-single.html" class="img">
-                  <img src='static/images/img_2.jpg' alt="Image" class="img-fluid" />
-                </a>
-
-                <div class="property-content">
-                  <div class="price mb-2"><span>$1,291,000</span></div>
-                  <div>
-                    <span class="d-block mb-2 text-black-50"
-                      >5232 California Fake, Ave. 21BC</span
-                    >
-                    <span class="city d-block mb-3">California, USA</span>
-
-                    <div class="specs d-flex mb-4">
-                      <span class="d-block d-flex align-items-center me-3">
-                        <span class="icon-bed me-2"></span>
-                        <span class="caption">2 beds</span>
-                      </span>
-                      <span class="d-block d-flex align-items-center">
-                        <span class="icon-bath me-2"></span>
-                        <span class="caption">2 baths</span>
-                      </span>
-                    </div>
-
-                    <a
-                      href="property-single.html"
-                      class="btn btn-primary py-2 px-3"
-                      >See details</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <!-- .item -->
-
-              <div class="property-item">
-                <a href="property-single.html" class="img">
-                  <img src='static/images/img_3.jpg' alt="Image" class="img-fluid" />
-                </a>
-
-                <div class="property-content">
-                  <div class="price mb-2"><span>$1,291,000</span></div>
-                  <div>
-                    <span class="d-block mb-2 text-black-50"
-                      >5232 California Fake, Ave. 21BC</span
-                    >
-                    <span class="city d-block mb-3">California, USA</span>
-
-                    <div class="specs d-flex mb-4">
-                      <span class="d-block d-flex align-items-center me-3">
-                        <span class="icon-bed me-2"></span>
-                        <span class="caption">2 beds</span>
-                      </span>
-                      <span class="d-block d-flex align-items-center">
-                        <span class="icon-bath me-2"></span>
-                        <span class="caption">2 baths</span>
-                      </span>
-                    </div>
-
-                    <a
-                      href="property-single.html"
-                      class="btn btn-primary py-2 px-3"
-                      >See details</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <!-- .item -->
-
-              <div class="property-item">
-                <a href="property-single.html" class="img">
-                  <img src="static/images/img_4.jpg" alt="Image" class="img-fluid" />
-                </a>
-
-                <div class="property-content">
-                  <div class="price mb-2"><span>$1,291,000</span></div>
-                  <div>
-                    <span class="d-block mb-2 text-black-50"
-                      >5232 California Fake, Ave. 21BC</span
-                    >
-                    <span class="city d-block mb-3">California, USA</span>
-
-                    <div class="specs d-flex mb-4">
-                      <span class="d-block d-flex align-items-center me-3">
-                        <span class="icon-bed me-2"></span>
-                        <span class="caption">2 beds</span>
-                      </span>
-                      <span class="d-block d-flex align-items-center">
-                        <span class="icon-bath me-2"></span>
-                        <span class="caption">2 baths</span>
-                      </span>
-                    </div>
-
-                    <a
-                      href="static/property-single.html"
-                      class="btn btn-primary py-2 px-3"
-                      >See details</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <!-- .item -->
-
-              <div class="property-item">
-                <a href="property-single.html" class="img">
-                  <img src="static/images/img_5.jpg" alt="Image" class="img-fluid" />
-                </a>
-
-                <div class="property-content">
-                  <div class="price mb-2"><span>$1,291,000</span></div>
-                  <div>
-                    <span class="d-block mb-2 text-black-50"
-                      >5232 California Fake, Ave. 21BC</span
-                    >
-                    <span class="city d-block mb-3">California, USA</span>
-
-                    <div class="specs d-flex mb-4">
-                      <span class="d-block d-flex align-items-center me-3">
-                        <span class="icon-bed me-2"></span>
-                        <span class="caption">2 beds</span>
-                      </span>
-                      <span class="d-block d-flex align-items-center">
-                        <span class="icon-bath me-2"></span>
-                        <span class="caption">2 baths</span>
-                      </span>
-                    </div>
-
-                    <a
-                      href="property-single.html"
-                      class="btn btn-primary py-2 px-3"
-                      >See details</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <!-- .item -->
-
-              <div class="property-item">
-                <a href="property-single.html" class="img">
-                  <img src="static/images/img_6.jpg" alt="Image" class="img-fluid" />
-                </a>
-
-                <div class="property-content">
-                  <div class="price mb-2"><span>$1,291,000</span></div>
-                  <div>
-                    <span class="d-block mb-2 text-black-50"
-                      >5232 California Fake, Ave. 21BC</span
-                    >
-                    <span class="city d-block mb-3">California, USA</span>
-
-                    <div class="specs d-flex mb-4">
-                      <span class="d-block d-flex align-items-center me-3">
-                        <span class="icon-bed me-2"></span>
-                        <span class="caption">2 beds</span>
-                      </span>
-                      <span class="d-block d-flex align-items-center">
-                        <span class="icon-bath me-2"></span>
-                        <span class="caption">2 baths</span>
-                      </span>
-                    </div>
-
-                    <a
-                      href="property-single.html"
-                      class="btn btn-primary py-2 px-3"
-                      >See details</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <!-- .item -->
-
-              <div class="property-item">
-                <a href="property-single.html" class="img">
-                  <img src="static/images/img_7.jpg" alt="Image" class="img-fluid" />
-                </a>
-
-                <div class="property-content">
-                  <div class="price mb-2"><span>$1,291,000</span></div>
-                  <div>
-                    <span class="d-block mb-2 text-black-50"
-                      >5232 California Fake, Ave. 21BC</span
-                    >
-                    <span class="city d-block mb-3">California, USA</span>
-
-                    <div class="specs d-flex mb-4">
-                      <span class="d-block d-flex align-items-center me-3">
-                        <span class="icon-bed me-2"></span>
-                        <span class="caption">2 beds</span>
-                      </span>
-                      <span class="d-block d-flex align-items-center">
-                        <span class="icon-bath me-2"></span>
-                        <span class="caption">2 baths</span>
-                      </span>
-                    </div>
-
-                    <a
-                      href="property-single.html"
-                      class="btn btn-primary py-2 px-3"
-                      >See details</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <!-- .item -->
-
-              <div class="property-item">
-                <a href="property-single.html" class="img">
-                  <img src="static/images/img_8.jpg" alt="Image" class="img-fluid" />
-                </a>
-
-                <div class="property-content">
-                  <div class="price mb-2"><span>$1,291,000</span></div>
-                  <div>
-                    <span class="d-block mb-2 text-black-50"
-                      >5232 California Fake, Ave. 21BC</span
-                    >
-                    <span class="city d-block mb-3">California, USA</span>
-
-                    <div class="specs d-flex mb-4">
-                      <span class="d-block d-flex align-items-center me-3">
-                        <span class="icon-bed me-2"></span>
-                        <span class="caption">2 beds</span>
-                      </span>
-                      <span class="d-block d-flex align-items-center">
-                        <span class="icon-bath me-2"></span>
-                        <span class="caption">2 baths</span>
-                      </span>
-                    </div>
-
-                    <a
-                      href="property-single.html"
-                      class="btn btn-primary py-2 px-3"
-                      >See details</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <!-- .item -->
-
-              <div class="property-item">
-                <a href="property-single.html" class="img">
-                  <img src="static/images/img_1.jpg" alt="Image" class="img-fluid" />
-                </a>
-
-                <div class="property-content">
-                  <div class="price mb-2"><span>$1,291,000</span></div>
-                  <div>
-                    <span class="d-block mb-2 text-black-50"
-                      >5232 California Fake, Ave. 21BC</span
-                    >
-                    <span class="city d-block mb-3">California, USA</span>
-
-                    <div class="specs d-flex mb-4">
-                      <span class="d-block d-flex align-items-center me-3">
-                        <span class="icon-bed me-2"></span>
-                        <span class="caption">2 beds</span>
-                      </span>
-                      <span class="d-block d-flex align-items-center">
-                        <span class="icon-bath me-2"></span>
-                        <span class="caption">2 baths</span>
-                      </span>
-                    </div>
-
-                    <a
-                      href="property-single.html"
-                      class="btn btn-primary py-2 px-3"
-                      >See details</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <!-- .item -->
+                  <!-- .item -->
+                  {% endfor %}
+                {% else %}
+                  <div class="col-md-12"><p>No Recent Properties</p></div>
+                {% endif %}
             </div>
 
             <div
